Minor style updates to prevent column breaks inside the ability flag list or the move flag list.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -413,6 +413,11 @@ a.button {
 	.dex-move__flags {
 		column-count: 2;
 	}
+
+	.dex-ability__flag,
+	.dex-move__flag {
+		break-inside: avoid;
+	}
 }
 
 .dex-ability__flag--disabled,
